# SpaceCandiru

SpaceCandiru/: TOI_2025.10.04_07.30.16.csv  k2pandc_2025.10.04_07.25.34.csv  pyproject.toml  teste.ipynb
